--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -211,13 +211,13 @@ nav:
   - Home: index.md
   # - About: bio\posts\about.md
   - Posts:
-      - Evaluation and Interpretation for LLMs: posts\llm-evals.md
-      - Introduction to Large Language Models: posts\intro-llms.md
-      - Problems & Challenges in MLOps: posts\mlops-open-problems.md
-      - Problems & Challenges in AutoML: posts\automl-problems-2019.md
-      - Developing A.I. using Games: posts\game-ai.md
-      - Why TensorLayer?: posts\why-tensorlayer.md
-      - Dense Associative Memory for Pattern Recognition: posts\associative-memory.md   
+      - Evaluation and Interpretation for LLMs: posts/llm-evals.md
+      - Introduction to Large Language Models: posts/intro-llms.md
+      - Problems & Challenges in MLOps: posts/mlops-open-problems.md
+      - Problems & Challenges in AutoML: post/automl-problems-2019.md
+      - Developing A.I. using Games: posts/game-ai.md
+      - Why TensorLayer?: posts/why-tensorlayer.md
+      - Dense Associative Memory for Pattern Recognition: posts/associative-memory.md   
 
   # - Speaking: 
     # podcast\posts\legal-tech.md
